gcc/testsuite/rust/rustc/ui/error-codes/E0778.rs
#![feature(isa_attribute)]

#[instruction_set()] // { dg-error ".E0778." "" { target *-*-* } }
fn no_isa_defined() {
}

fn main() {
}

